removed scans running on server , changed model to complete user responsibility to run the scans using agent
